# bitcast-ru

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: unit-test.yaml
examples/: basic.rs
src/: batch.rs  db.rs  db_test.rs  error.rs  iterator.rs  lib.rs  merge.rs  options.rs
src/data/: data_file.rs  log_record.rs  log_record_pos.rs  logrecord.rs  merge_flag_data_file.rs  mod.rs
src/fio/: file_io.rs  io_manager.rs  mod.rs
src/index/: btree.rs  index.rs  indexer.rs  mod.rs
src/utils/: rand_kv.rs
