[package]
name = "bitcask-rs"
version = "0.1.0"
edition = "2021"

[[example]]
name = "basic"
path = "examples/basic.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
log = "0.4.0"
env_logger = "0.10.0"
thiserror = "1.0.39"
tempfile = "3.4.0"
# uuid = "1.3.0"
bytes = "1.4.0"
prost = "0.11.8"
crc32fast = "1.3.2"
ulid = "1.0.0"


[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
